--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的GitHub Pages网站</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>欢迎来到我的GitHub Pages网站！</h1>
-    <p>这是一个示例页面。</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于</a></li>
+                <li><a href="contact.html">联系</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>欢迎来到我的GitHub Pages网站！</h1>
+        <p>这是一个示例页面。</p>
+    </main>
+    <footer>
+        <p>&copy; 2022 我的GitHub Pages网站. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
