--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的GitHub Pages网站</title>
-    <link rel="stylesheet" href="style.css">
+    <title>网易云音乐音乐人推广</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="about.html">关于</a></li>
-                <li><a href="contact.html">联系</a></li>
-            </ul>
-        </nav>
+        <h1>欢迎来到我的网易云音乐音乐人页面</h1>
     </header>
     <main>
-        <h1>欢迎来到我的GitHub Pages网站！</h1>
-        <p>这是一个示例页面。</p>
+        <section id="songs">
+            <h2>我的歌曲</h2>
+            <ul>
+                <li><a href="https://music.163.com/song?id=2619435011">歌曲1</a></li>
+                <li><a href="https://music.163.com/song?id=2619076696">歌曲2</a></li>
+                <li><a href="https://music.163.com/song?id=2619453926">歌曲3</a></li>
+                <li><a href="https://music.163.com/song?id=2157217569">歌曲4</a></li>
+            </ul>
+        </section>
+        <section id="artist">
+            <h2>查看我的歌手页面</h2>
+            <p><a href="https://music.163.com/#/artist?id=61889242">点击这里访问我的歌手页面</a></p>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2022 我的GitHub Pages网站. All rights reserved.</p>
+        <p>版权所有 &copy; 2022 我的网易云音乐音乐人</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
