--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网易云音乐音乐人推广</title>
+    <title>童</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的网易云音乐音乐人页面</h1>
+        <h1>欢迎来到我的网站</h1>
     </header>
     <main>
         <section id="songs">
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>版权所有 &copy; 2022 我的网易云音乐音乐人</p>
+        <p>版权所有 &copy; 2024 童</p>
     </footer>
 </body>
 </html>
