--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网易云音乐音乐人推广</title>
+    <title>童</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,40 +71,17 @@
         <a href="action.html">互动</a>
         <a href="contact.html">联系</a>
     </nav>
-    <h1>欢迎来到我的网易云音乐音乐人页面</h1>
+    <h1>欢迎来到我的网站</h1>
     <ul>
-        <li><a href="https://music.163.com/song?id=2619435011">歌曲1</a></li>
-        <li><a href="https://music.163.com/song?id=2619076696">歌曲2</a></li>
-        <li><a href="https://music.163.com/song?id=2619453926">歌曲3</a></li>
-        <li><a href="https://music.163.com/song?id=2157217569">歌曲4</a></li>
+        <li><a href="https://music.163.com/song?id=2619435011">自然风光</a></li>
+        <li><a href="https://music.163.com/song?id=2619076696">壹号作品</a></li>
+        <li><a href="https://music.163.com/song?id=2619453926">自然风光(洛天依)</a></li>
+        <li><a href="https://music.163.com/song?id=2157217569">解题</a></li>
     </ul>
     <p>了解更多关于我的音乐作品和其他信息，请访问我的歌手页面：</p>
     <center><a href="https://music.163.com/#/artist?id=61889242">点击这里访问我的歌手页面</a></center>
     <footer>
-        <p>&copy; 2022 我的网易云音乐音乐人. All rights reserved.</p>
+        <p>&copy; 2024 童. All rights reserved.</p>
     </footer>
-    <div id="player">
-        <audio id="audioPlayer" src=""></audio>
-        <button onclick="playSong('https://music.163.com/song/media/outer/url?id=2619435011.mp3')">播放歌曲1</button>
-        <button onclick="playSong('https://music.163.com/song/media/outer/url?id=2619076696.mp3')">播放歌曲2</button>
-        <button onclick="playSong('https://music.163.com/song/media/outer/url?id=2619453926.mp3')">播放歌曲3</button>
-        <button onclick="playSong('https://music.163.com/song/media/outer/url?id=2157217569.mp3')">播放歌曲4</button>
-        <button onclick="pauseSong()">暂停</button>
-        <button onclick="stopSong()">停止</button>
-    </div>
-    <script>
-        var audioPlayer = document.getElementById("audioPlayer");
-        function playSong(url) {
-            audioPlayer.src = url;
-            audioPlayer.play();
-        }
-        function pauseSong() {
-            audioPlayer.pause();
-        }
-        function stopSong() {
-            audioPlayer.pause();
-            audioPlayer.currentTime = 0;
-        }
-    </script>
 </body>
 </html>
