--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
     </nav>
     <h1>欢迎来到我的网站</h1>
     <ul>
-        <p>音乐作品(电机名称即可播放):</p>
+        <h3>音乐作品(点击名称即可播放):</h3>
+        <ul>
         <li><a href="https://music.163.com/song?id=2619435011">自然风光</a></li>
         <li><a href="https://music.163.com/song?id=2619076696">壹号作品</a></li>
         <li><a href="https://music.163.com/song?id=2619453926">自然风光(洛天依)</a></li>
         <li><a href="https://music.163.com/song?id=2157217569">解题</a></li>
     </ul>
     <br>
-    <p>了解更多关于我的音乐作品和其他信息，请访问我的歌手页面：</p>
+    <h3>了解更多关于我的音乐作品和其他信息，请访问我的歌手页面：</h3>
     <center><a href="https://music.163.com/#/artist?id=61889242">点击这里访问我的歌手页面</a></center>
     <footer>
         <p>&copy; 2024 童. All rights reserved.</p>
