--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 </head>
 <body>
     <nav>
-        <a href="#">首页</a>
-        <a href="action.html">互动</a>
+        <p>&nbsp;</p><a href="#">首页</a><p>&nbsp;</p>
+        <a href="action.html">互动</a><p>&nbsp;</p>
         <a href="contact.html">联系</a>
     </nav>
+    <hr/>
     <h1>欢迎来到我的网站</h1>
     <ul>
         <h3>音乐作品(点击名称即可播放):</h3>
