--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </head>
 <body>
     <nav>
-        <p>&nbsp;</p><a href="#">首页</a><p>&nbsp;</p>
-        <a href="action.html">互动</a><p>&nbsp;</p>
+        <h3>&nbsp;</h3><a href="#">首页</a><h3>&nbsp;</h3>
+        <a href="action.html">互动</a><h3>&nbsp;</h3>
         <a href="contact.html">联系</a>
     </nav>
     <hr/>
