--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 </head>
 <body>
     <nav>
-        <h3>&nbsp;</h3><a href="#">首页</a><h3>&nbsp;</h3>
-        <a href="action.html">互动</a><h3>&nbsp;</h3>
-        <a href="contact.html">联系</a>
+       <a href="#">&nbsp;首页</a>
+        <a href="action.html">&nbsp;互动</a>
+        <a href="contact.html">&nbsp;联系</a>
     </nav>
     <hr/>
     <h1>欢迎来到我的网站</h1>
