--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
     <br>
     <h3>了解更多关于我的音乐作品和其他信息，请访问我的歌手页面：</h3>
     <center><a href="https://music.163.com/#/artist?id=61889242">点击这里访问我的歌手页面</a></center>
+
+
+<script src="https://utteranc.es/client.js"
+        repo="185www/comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+        
     <footer>
         <p>&copy; 2024 童. All rights reserved.</p>
     </footer>
