--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Page</title>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #333;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #f60;
+        }
+        footer {
+            text-align: center;
+            margin-top: 50px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-top: 1px solid #e5e5e5;
+        }
+        button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        #player {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+        #audioPlayer {
+            width: 300px;
+            height: 32px;
+        }
+    </style>
+</head>
+<body>
+    <nav>
+       <a href="index.html">&nbsp;首页</a>
+        <a href="action.html">&nbsp;互动</a>
+        <a href="contact.html">&nbsp;联系</a>
+    </nav>
+    <hr/>
+    <h1>Contact</h1>
+  <center><p>email:www185_github@163.com</p></center>
+
+</body>
+</html>
 
