--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,9 @@
     <hr/>
     <h1>Contact</h1>
   <center><p>email:www185_github@163.com</p></center>
-
+<footer>
+        <p>&copy; 2024 童. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
