--- a/action.html
+++ b/action.html
@@ -79,5 +79,8 @@
         crossorigin="anonymous"
         async>
 </script>
+    <footer>
+        <p>&copy; 2024 童. All rights reserved.</p>
+    </footer>
 </body>
 </html>
