--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h3>了解更多关于我的音乐作品和其他信息，请访问我的歌手页面：</h3>
     <center><a href="https://music.163.com/#/artist?id=61889242">点击这里访问我的歌手页面</a></center>
 
-
+<script src="http://res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 
         
     <footer>
